today work responsive footer and responsive bottom section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,169 @@
             </div>
         </div>
         <!-- Description-section--off -->
+        <div class="spacer-100px"></div>
+        <!-- .2nd-promoting-section--0n -->
+        <div class="second-promoting-section">
+            <div class="second-promoting-section-wrapper">
+                <div class="img-wrapper">
+                    <img
+                        src="sass/second-promoting-section-left-img.jpg"
+                        alt=""
+                    />
+                </div>
+                <div class="second-img-wrapper">
+                    <img
+                        src="sass/second-promoting-section-right-img.jpg"
+                        alt=""
+                    />
+                </div>
+            </div>
+        </div>
+        <!-- .2nd-promoting-section--0ff -->
+        <div class="spacer-100px"></div>
+        <!-- Description-section--on -->
+        <div class="Description-section">
+            <div class="description-section-wrapper">
+                <h1>
+                    Making music isn't easy. It takes time, effort, and
+                    learning. But when you're in the flow, it's incredibly
+                    rewarding.
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Nobis similique ipsam distinctio suscipit earum optio,
+                    doloribus quae dicta esse in excepturi reiciendis minus
+                    dolorem facilis consectetur impedit unde quia omnis!
+                </p>
+            </div>
+        </div>
+        <!-- Description-section--off -->
+        <div class="spacer-100px"></div>
+        <!-- img-cta-section--on -->
+        <div class="img-cta-section">
+            <div class="img-cta-section-wrapper">
+                <div class="left">
+                    <div class="img-wrapper">
+                        <img src="sass/img-cta-section-img.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="right-wrapper">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Explicabo, excepturi esse cum eius nisi
+                            consectetur aliquam ex fugiat nihil eos,
+                            necessitatibus, odio cumque! Itaque praesentium
+                            maxime alias. Magnam, quia accusantium.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- img-cta-section-off -->
+        <div class="spacer-100px"></div>
+        <!-- footer--on -->
+        <footer>
+            <div class="footer-wrapper">
+                <div class="card">
+                    <ul>
+                        <li>Register Live or Push ></li>
+                        <li>About Ableton ></li>
+                        <li>Jobs ></li>
+                    </ul>
+                    <div class="icons-bar">
+                        <img src="sass/icon i.png" alt="" />
+                        <img src="sass/icon t.png" alt="" />
+                        <img src="sass/icon y.png" alt="" />
+                        <img src="sass/icon f.png" alt="" />
+                    </div>
+                </div>
+                <div class="card">
+                    <h1>Education</h1>
+                    <ul>
+                        <li>Offer for students and teacher ></li>
+                        <li>offer for institutions ></li>
+                        <li>Push 1 trade in initiative ></li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <ul>
+                        <li>Sign up to our newsletter</li>
+                        <li>
+                            Enter your Email address to stay up top date with
+                            the latest offer
+                        </li>
+                        <li>Tutorials download ond more</li>
+                    </ul>
+                    <div class="input-button-wrapper">
+                        <input type="text" placeholder="search some thing" />
+                        <button>Sign up</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h1>Community</h1>
+                    <ul>
+                        <li>Find Ableton users Group ></li>
+                        <li>Find Certified Tanning ></li>
+                        <li>Become a Certified Tanning ></li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h1>Distributors</h1>
+                    <ul>
+                        <li>Find a Distributors</li>
+                        <li>Try push in store</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h1>Language in Location</h1>
+                 <div class="languages-wrapper">
+                    <div class="english">
+                        <h1>English</h1>
+                        <select name="" id=""></select>
+                    </div>
+                    <div class="english">
+                        <h1>Languages</h1>
+                        <select name="" id=""></select>
+                    </div>
+                 </div>
+                </div>
+            </div>
+            <div class="spacer-100px"></div>
+            <div class="last-div">
+                <div class="left">
+                    <p>Active</p>
+                    <p>Contact us</p>
+                    <p>Press resources</p>
+                    <p>Legal info</p>
+                    <p>Privacy policy</p>
+                    <p>Cookies setting</p>
+                    <p>Imprint</p>
+                </div>
+                <div class="right">
+                    <p>Made in Berlin</p>
+                    <div class="img-wrapper">
+                        <img src="sass/ableton-main-logo.webp" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </footer>
+        <!-- footer--off -->
+        <div class="spacer-100px"></div>
+        <div class="spacer-50px"></div>
+        <div class="bottom-bar">
+            <div class="bottom-bar-wrapper">
+                <h1>Frontend Practice @ 2023</h1>
+                <ul>
+                    <li>Home</li>
+                    <li>Project</li>
+                    <li>FAQ</li>
+                    <li>News letter</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
     </body>
     <script type="text/javascript">
         $(".menu-toggle-button").click(function () {
